BUG-DFC-13095-Exam-results-helpline-Show-message-link-overlaps-information-icon-on-smaller-screens
Issue with anchor link focus underline is spanning across the full width fix for all toolkits

--- a/src/gds_service_toolkit_BAU/assets/src/frontend/sass/includes/_custom.scss
+++ b/src/gds_service_toolkit_BAU/assets/src/frontend/sass/includes/_custom.scss
@@ -483,6 +483,7 @@ $mobile: 768px;
 .global-bar {
     padding: 12px 0;
     position: relative;
+    overflow: hidden;
 
     .global-bar-message-container {
       max-width: 960px;
@@ -584,6 +585,10 @@ $mobile: 768px;
            margin-left:50px;
            position:relative;
            padding-top:10px;
+
+           &:focus {
+             float:left;
+           }
          }
        }
      }
